# oceanicospy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  nb_diff.txt  py_diff.txt  pyproject.toml  requierements.txt  requirements.txt  requirements_2.txt  requirements_new.txt  requirements_runtime.txt  setup.cfg  setup_dev.sh  test.py
.github/workflows/: sync-main-to-integration.yml
data/gis/: bat_sai_50m_32617.shx  gis_examples.ipynb
data/gis/processed/: profile_xyz.xyz
data/gis/raw/: small_domain.dbf  (+1 more)
docs/: conf.py  contributing.rst  dev_setup.rst  index.rst  installing.rst  requirements.txt  support.rst
docs/_build/: .buildinfo  genindex.html  index.html  installing.html  objects.inv  plots.html  py-modindex.html  search.html  searchindex.js
docs/analysis/: harmonic_decomposition.rst  index.rst  spectral.rst  spectral_analysis.ipynb  temporal_analysis.ipynb
docs/downloads/: CMDSDownloader.rst  ERA5Downloader.rst  UHSLCDownloader.rst  index.rst
docs/gis/: crs.rst  gis_examples.ipynb  grid.rst  index.rst  point_io.rst  profile_axis.rst  profile_interpolator.rst  xyz_mask.rst  xyz_merger.rst
docs/models/: index.rst
docs/observations/: AWAC.rst  Buoy.rst  HOBO.rst  index.rst  reading_field_data.ipynb  test_walkthrough.rst
docs/retrievals/: CMDSDownloader.rst  ERA5Downloader.rst  UHSLCDownloader.rst  data_fetcher.ipynb  index.rst
examples/: compare_swan_output.ipynb  compare_swan_with_buoy.ipynb  data_fetcher.ipynb  gis_examples.ipynb  gis_examples_old.ipynb  harmonic_tide_decomposition.ipynb  launching_swan_cases.ipynb  main_xbeach.py  params.txt  plotting_wind_CMDS_ERA5_WS_Spott_Aug2023.ipynb  reading_field_data.ipynb  review-notes-data_fetcher.md  spectral_analysis.ipynb  swan_nonstationary_case.ipynb  swan_stationary_case.ipynb  temporal_analysis.ipynb  test_another_branch.py  to-do-data_fetcher.md  to_do_analysis.md  to_do_observations.md
examples/analysis/: harmonic_tide_decomposition.ipynb  spectral_analysis.ipynb  temporal_analysis.ipynb
examples/models/: main_plots.py  plot_Hrms.py  swan_nonstationary_case.ipynb  swan_stationary_case.ipynb  temp_swanpy_gis.ipynb  xbeach_1D_case.ipynb  xbeach_2D_case.ipynb
examples/other_notebooks/: compare_swan_with_buoy.ipynb  main_swan.py  main_swan_nonstat.py  plotting_wind_CMDS_ERA5_WS_Spott_Aug2023.ipynb
oceanicospy/: __init__.py
oceanicospy/analysis/: __init__.py  climatology.py  extremes.py  harmonic_tides.py  spectral.py  temporal.py  wave_pipelines.py
oceanicospy/downloads/: download_CMDS_data.py  download_ERA5_data.py  download_UHSLC_data.py
oceanicospy/gis/: __init__.py  crs.py  crs_tools.py  grid.py  io_xyz.py  plotting.py  point_io.py  profile_axis.py  profile_builder.py  profile_interpolator.py  tif_tools.py  xyz_mask.py  xyz_merge.py  xyz_merger.py  xyz_tile.py
oceanicospy/gis_old/: polygon_creator.py  xyz_merge.py  xyz_merge_old.py  xyz_rectangle_remover.py
oceanicospy/observations/: __init__.py  aqualogger.py  awac.py  bluelog.py  buoy.py  hobo.py  pressure_sensor_base.py  rbr.py  weather_station.py
oceanicospy/plots/: __init__.py  basic_plots.py  style.py
oceanicospy/retrievals/: __init__.py  download_CMDS_data.py  download_ERA5_data.py  download_IDEAM_data.py  download_RONI_index.py  download_UHSLC_data.py
oceanicospy/utils/: __init__.py  extras.py  files.py  metrics.py  waterlevel.py  wave_props.py  wind.py
softwarex/: figure_illustrative_example.ipynb
tests/: conftest.py
tests/analysis/: test_climatology.py  test_extremes.py  test_spectral.py  test_temporal.py
tests/utils/: test_constants.py  test_extras.py  test_files.py  test_metrics.py  test_wave_props.py
under_dev/: numerics.py  physics.py  test_ctd.py  to_do_analysis.md  to_do_examples-reading_field_data.md  to_do_observations.md  to_do_retrievals.md  to_do_swanpy.md  to_do_xbeachpy.md
under_dev/analysis/: kp_corrector.py  puv_method.py
under_dev/models/: main_xbeach (1).py
under_dev/observations/: mantaray.py  properties_pressure_sensor.py
(+533 files in other folders)
