[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanicospy"
version = "0.0.1"
description = "A handle package for most of the programming tools in the research group OCEANICOS"
readme = "README.md"
authors = [
  { name = "OCEANICOS developer team", email = "oceanicos_med@unal.edu.co" }
]
keywords = ["python", "first package"]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]
requires-python = ">=3.7"
dependencies = [
  "cdsapi>=0.7.6",
  "copernicusmarine>=2.2.1",
  "EMD-signal>=1.6.4",
  "matplotlib>=3.9.2",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "pyemd>=1.0.0",
  "pyproj>=3.7.0",
  "pywavelets",
  "requests>=2.32.3",
  "scipy>=1.14.1",
  "setuptools>=75.1.0",
  "urllib3>=2.3.0",
  "wavespectra>=4.4.1",
  "wget>=3.2",
  "windrose>=1.9.2",
  "xarray>=2024.11.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "html", "docs", "${defaultBuildDir}"]
pythonCommand = ["/Users/franklinayala/venvs/oceanicospy/bin/python"]