[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanicospy"
version = "0.1.0rc1"
description = "A Python library for oceanographic data analysis, numerical model preprocessing, and data retrieval"
readme = "README.md"
authors = [
  { name = "OCEANICOS developer team", email = "oceanicos_med@unal.edu.co" }
]
keywords = ["oceanography", "wave modeling", "XBeach", "SWAN", "coastal engineering", "spectral analysis", "ERA5"]
license = {file= "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.7"
dependencies = [
  "cdsapi>=0.7.6",
  "copernicusmarine>=2.2.1",
  "EMD-signal==1.6.4",
  "geopandas==1.1.3",
  "h5py==3.16.0",
  "ipywidgets>=8.0.0",
  "matplotlib>=3.9.2",
  "netcdf4>=1.6.3",
  "numpy>=2.1.3",
  "openpyxl>=3.0.0",
  "pandas>=2.2.3",
  "pyemd>=1.0.0",
  "pyproj>=3.7.0",
  "pywavelets",
  "requests>=2.32.3",
  "scipy>=1.14.1",
  "shapely==2.1.2",
  "urllib3>=2.3.0",
  "utide>=0.3.1",
  "wavespectra>=4.4.1",
  "wget>=3.2",
  "windrose>=1.9.2",
  "xarray>=2024.11.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.2",
  "sphinx_rtd_theme>=2.0",
  "sphinx-book-theme>=1.0",
  "nbsphinx",
  "myst-nb",
]
dev = [
  "ipykernel>=7.0",
  "pytest>=8.0",
  "pytest-cov",
  "build",
  "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "html", "docs", "${defaultBuildDir}"]