[metadata]
name = oceanicospy
version = 0.0.1
author = OCEANICOS developer team
author_email = oceanicos_med@unal.edu.co
description = A handle package for most of the programming tools in the research group OCEANICOS
long_description = This package looks for having at hand most of the scripts OCEANICOS uses for their ocean research/consultancy
long_description_content_type = text/plain
keywords = python, first package
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = find:
install_requires =

[options.packages.find]
where = .

[options.package_data]
oceanicospy =
    plots/fonts/*.ttf
